--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
     <!-- gift box section -->
     <section class="gift_box">
         <div class="container d-flex flex-wrap align-itens-center gap-2 justify-content-center">
-            <p class="mb-0"><i class="text-warning fa-solid fa-gift fs-6"></i> Register now — Get up to 100 USDT in
+            <p class="mb-0"><i class="text-success fa-solid fa-gift fs-6"></i> Register now — Get up to 100 USDT in
                 trading fee
                 rebate (for verified users)</p>
             <button class="warning_btn py-0 px-2 mb-0">Radeem Gift</button>
@@ -478,7 +478,7 @@
                 <div class="row align-items-center">
                     <div class="col-12 col-lg-6">
                         <h1>Buy, trade, and hold 350+ cryptocurrencies on <br class="d-none d-lg-block"> Binance</h1>
-                        <p><i class="text-warning fa-solid fa-gift fs-6"></i> Trade Bitcoin for free <i
+                        <p><i class="text-success fa-solid fa-gift fs-6"></i> Trade Bitcoin for free <i
                                 class="fs-6 text-secondary fa-solid fa-chevron-right"></i></p>
                         <div style="max-width: 390px;">
 
